--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@
   --black-color: #212121;
   --color-white: #FFFFFF;
   --text-color: #BDBDBD;
+
+  --transition1: all 400ms ease-in-out;
+  --transition2: all 400ms ease;
+
+  --container-lg: 86%;
+  --container-lg: 94%;
 }
 
 * {
@@ -22,6 +28,71 @@
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
-    background-color: var(--bg-color);
+  background-color: var(--bg-color);
+  line-height: 1.6;
+  color: var(--text-color);
+}
+
+section {
+  margin-top: 5rem;
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: 500;
+}
+
+h2 {
+  color: var(--black-color);
+  font-size: 1.6rem;
+}
+
+h5 {
+  color: var(--yellow);
+  font-size: 0.9rem;
+}
+
+.container {
+  width: var(--container-lg);
+  margin: 0 auto;
+}
+
+.section-title {
+  text-align: center;
+}
+
+/***********NAVBAR STYLES**************/
+
+nav {
+  width: 100vw;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav .nav-menu {
+  display: flex;
+  gap: 2rem;
+}
+
+.nav-menu a {
+  color: var(--text-color);
+  padding: 0.4rem 0.8rem;
+}
+
+.nav-menu .btn {
+  color: var(--black-color);
+  border: 2px solid var(--black-color);
+  background: transparent;
+  padding: 0.4rem 0.8rem;
+  border-radius: 0.5rem;
 }
