--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,8 @@ h5 {
 
 .section-head h2 {
   color: var(--black-color);
-  font-size: 1.3rem;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .section-head h4 {
@@ -88,10 +89,11 @@ h5 {
   padding: 0.3rem 0.8rem;
   border-radius: 0.9rem;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 .section-head p {
-  font-size: 1rem;
+  font-size: 1.1rem;
   color: var(--text-color);
 }
 
@@ -139,6 +141,39 @@ nav .nav-menu {
 
 
 /***********BENEFIT STYLES**************/
+
+.benefits-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 3rem;
+}
+
+.benefits-container img {
+  width: 90%;
+  border-radius: 15rem 2rem 2rem 2rem;
+}
+
+
+
+.benefits-right .benefits {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns:  1fr 1fr;
+  gap: 2rem;
+}
+
+.benefits .benefit h6 {
+  background: var(--primary);
+  padding: 0.4rem;
+  border-radius: 50%;
+  color: var(--color-white);
+}
+
+.benefits .benefit h2 {
+  font-size: 1.2rem;
+  color: var(--black-color);
+  font-weight: bold;
+}
 
 
 
